--- a/index.html
+++ b/index.html
@@ -99,87 +99,62 @@
 
     </section> <!-- end intro -->
 
+<!-- about
+    ================================================== -->
+    <section id="about" class="s-about target-section">
 
-    <section id="about">
+        <div class="about-me">
 
-        <div class="row">
-  
-           <div class="three columns">
-              <img class="profile-pic" src="images/profilepic.png" alt="Yash Profile Pic" />
-           </div>
-  
-           <div class="nine columns main-col">
-  
-              <h2>About Me</h2>
-              <p>
-                 A <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu">Georgia Tech</a> master's student 
-                 working with <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/~zk15/">Prof. Zsolt Kira</a> 
-                 and PhD student <a target="_blank" rel="noopener noreferrer" href="https://jamessealesmith.github.io">James Smith</a> 
-                 on continual learning of large pretrained models. 
-                 After graduating in 2020 from <a target="_blank" rel="noopener noreferrer" href="https://www.coep.org.in">College of Engineering, Pune</a>, 
-                 I worked for a year at <a target="_blank" rel="noopener noreferrer" href="https://www.deshaw.com">D. E. Shaw</a> as a Software Developer.  
-                 In the pandemic summer, I contributed to <a target="_blank" rel="noopener noreferrer" href="https://github.com/kubeflow/">Kubeflow</a> 
-                 as a <a target="_blank" rel="noopener noreferrer" href="https://summerofcode.withgoogle.com/archive/2020/projects/6175219762331648/">
-                 Google Summer of Code</a> student. 
-                 Previously, I have interned at the <a target="_blank" rel="noopener noreferrer" href="https://val.cds.iisc.ac.in">Video Analytics Lab</a> 
-                 of the Indian Institute of Science, Bangalore, working with <a target="_blank" rel="noopener noreferrer" 
-                 href="https://scholar.google.co.in/citations?user=cVg7HrEAAAAJ&hl=en">Prof. R. Venkatesh Babu</a> and PhD student 
-                 <a target="_blank" rel="noopener noreferrer" href="https://sites.google.com/view/jogendra/">Jogendra Nath Kundu</a> 
-                 on seq2seq modeling of human motion sequences.
-                 After joining GT in Fall 2021, some of my relevant coursework includes Machine Learning with Limited Supervision 
-                 research course by <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/~judy/">Prof. Judy Hoffman</a>,
-                 Deep Reinforcement Learning for Intelligent Control, Natural Language Processing, Computer Vision, and Deep Learning!
-              </p>
-  
-              <div class="row">
-  
-                 <div class="columns contact-details">
-  
-                    <h2>Contact Details</h2>
-                    <p class="address">
-                       <span><i class="fa fa-dot-circle-o"></i><b>&nbsp;&nbsp;Contact Number:</b></span><br>
-                       <span><a target="_blank" rel="noopener noreferrer" href="tel:+1-404-820-5409" style="color: #7A7A7A">+1-(404)-820-5409</a></span><br>
-                       <span><i class="fa fa-dot-circle-o"></i><b>&nbsp;&nbsp;Email:</b></span><br>
-                       <span><a target="_blank" rel="noopener noreferrer" href="mailto:yashjakhotiya@gatech.edu" style="color: #7A7A7A">yashjakhotiya@gatech.edu</a></span><br>
-                       <span><a target="_blank" rel="noopener noreferrer" href="mailto:mailsforyashj@gmail.com" style="color: #7A7A7A">mailsforyashj@gmail.com</a></span><br>
-                       <span><i class="fa fa-dot-circle-o"></i><b>&nbsp;&nbsp;Address:</b></span><br>
-                       <span>855 W Peachtree St. NW, Apt. 1228, Atlanta, GA 30308</span><br>
+            <div class="row heading-block" data-aos="fade-up">
+                <div class="column large-full">
+                    <h2 class="section-heading">About Me</h2>
+                </div>
+            </div>
+
+            <div class="row about-me__content" data-aos="fade-up">
+                <div class="column large-full about-me__text">
+                    <p class="lead">
+                    Nulla aspernatur nam et accusantium. Tempore delectus dignissimos aut
+                    ab commodi. Labore et cupiditate temporibus odio debitis eaque. 
+                    Officia provident aut iste et dicta perferendis. Velit iure adipisci. 
+                    Molestiae qui fuga rerum facilis.
                     </p>
-  
-                 </div>
-  
-                 <div class="columns education-details">
-  
-                    <h2>Education Details</h2>
-                    <p class="address">
-                       <span><i class="fa fa-dot-circle-o"></i><b>&nbsp;&nbsp;Georgia Institute of Technology</b></span><br>
-                       <span>&nbsp;&nbsp;GPA: 4.0/4.0 </span><br>
-                       <span>&nbsp;&nbsp;Master of Science in Computer Science </span><br>
-                       <span>&nbsp;&nbsp;Dual Specialization in Machine Learning and Robotics</span><br>
-                       <span><i class="fa fa-dot-circle-o"></i><b>&nbsp;&nbsp;College of Engineering, Pune</b></span><br>
-                       <span>&nbsp;&nbsp;CGPA: 9.2/10 </span><br>
-                       <span>&nbsp;&nbsp;Bachelor of Technology, Computer Engineering</span><br>
-                       <span>&nbsp;&nbsp;Minor in Financial Engineering</span>
-                    </p>
-  
-                 </div>
-  
-                 <div class="columns download">
-  
+
                     <p>
-                       <a target="_blank" rel="noopener noreferrer" href="https://yashjakhotiya.github.io/Vaishnavi-Kalantri-Resume.pdf" class="button"><i
-                             class="fa fa-download"></i>Resume</a>
+                    Reprehenderit quia id facilis nihil odit perferendis fugiat quidem voluptas. 
+                    Non ratione tenetur. Quis earum quia deleniti fugit fugiat minus omnis. 
+                    Iure dolore dolorum. Aspernatur quos cumque ea dolorum nemo nihil 
+                    beatae magnam. Qui molestiae rem. Maxime enim provident ipsum reprehenderit tenetur. Et cupiditate 
+                    repellendus. Et modi ipsum aut harum. Ratione alias.
                     </p>
-  
-                 </div>
-  
-              </div> <!-- end row -->
-  
-           </div> <!-- end .main-col -->
-  
-        </div>
-  
-     </section> <!-- About Section End-->
+
+                    <p>
+                    Rerum consequatur dolore quae.
+                    Qui excepturi facilis quam quae quasi. Mollitia occaecati minus voluptas veniam.
+                    Qui excepturi facilis quam quae quasi. Mollitia occaecati minus voluptas veniam. Est est occaecati dolor 
+                    qui aut et eum. Aspernatur quos cumque ea dolorum nemo nihil 
+                    beatae magnam. Qui molestiae rem.
+                    </p>
+
+                    <p>
+                    Maxime enim provident ipsum reprehenderit tenetur. Et cupiditate 
+                    repellendus. Et modi ipsum aut harum. Ratione alias sed. Rerum 
+                    consequatur dolore quae. Qui excepturi facilis quam quae quasi. 
+                    Mollitia occaecati minus voluptas veniam. Est est occaecati dolor 
+                    qui aut et eum. Aspernatur quos cumque ea dolorum nemo nihil 
+                    beatae magnam. Qui molestiae rem. Aspernatur quos cumque ea dolorum 
+                    nemo nihil. Qui molestiae rem.
+                    </p>
+                </div>
+            </div>
+    
+            <div class="row about-me__buttons">
+                <div class="column large-half tab-full" data-aos="fade-up">
+                    <a href="#0" class="btn btn--primary full-width">Download CV</a>
+                </div>
+            </div>
+
+        </div> <!-- end about-me -->
   
         <div class="about-experience">
 
