--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
 
         <div class="row heading-block heading-block--center" data-aos="fade-up">
             <div class="column large-full">
-                <h2 class="section-heading section-heading--centerbottom">Capabilities</h2>
+                <h2 class="section-heading section-heading--centerbottom">Reading</h2>
 
                 <p class="section-desc">
-                    I love reading books. I take up reading challenges each year and complete them. Here are few of my favourites from the 87 books I read.
+                    I take up reading challenges each year and complete them. Here are few of my favourites from the 87 books I read.
                 </p>
             </div>
         </div> <!-- end heading-block -->
