--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Epitome</title>
+    <title>Vaishnavi Kalantri</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -26,9 +26,9 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
 
 </head>
@@ -53,8 +53,8 @@
             <ul class="header-main-nav">
                 <li class="current"><a class="smoothscroll" href="#intro" title="intro">Intro</a></li>
                 <li><a class="smoothscroll" href="#about" title="about">About</a></li>
-                <li><a class="smoothscroll" href="#services" title="services">Services</a></li>
-                <li><a class="smoothscroll" href="#works" title="works">Works</a></li>
+                <li><a class="smoothscroll" href="#reading" title="reading">Services</a></li>
+                <li><a class="smoothscroll" href="#causes" title="causes">Works</a></li>
                 <li><a class="smoothscroll" href="#contact" title="contact us">Say Hello</a></li>	
             </ul>
 
@@ -105,13 +105,13 @@
 
         <div class="about-me">
 
-            <div class="row heading-block" data-aos="fade-up">
+            <div class="row heading-block">
                 <div class="column large-full">
                     <h2 class="section-heading">About Me</h2>
                 </div>
             </div>
 
-            <div class="row about-me__content" data-aos="fade-up">
+            <div class="row about-me__content">
                 <div class="column large-full about-me__text">
                     <p class="lead">
                     Nulla aspernatur nam et accusantium. Tempore delectus dignissimos aut
@@ -149,7 +149,7 @@
             </div>
     
             <div class="row about-me__buttons">
-                <div class="column large-half tab-full" data-aos="fade-up">
+                <div class="column large-half tab-full">
                     <a href="#0" class="btn btn--primary full-width">Download CV</a>
                 </div>
             </div>
@@ -158,7 +158,7 @@
   
         <div class="about-experience">
 
-            <div class="row heading-block" data-aos="fade-up">
+            <div class="row heading-block">
                 <div class="column large-full">
                     <h2 class="section-heading">Work & Education</h2>
                 </div>
@@ -166,7 +166,7 @@
 
             <div class="row about-experience__timeline">
 
-                <div class="column large-half tab-full" data-aos="fade-up">
+                <div class="column large-half tab-full">
                     <div class="timeline">
 
                         <div class="timeline__icon-wrap">
@@ -212,7 +212,7 @@
                     </div>
                 </div>
 
-                <div class="column large-half tab-full" data-aos="fade-up">
+                <div class="column large-half tab-full">
                     <div class="timeline">
 
                         <div class="timeline__icon-wrap">
@@ -266,23 +266,23 @@
 
     <!-- services
     ================================================== -->
-    <section id="services" class="s-services ss-dark target-section">
+    <section id="reading" class="s-services ss-dark target-section">
 
         <div class="shadow-overlay"></div>
 
-        <div class="row heading-block heading-block--center" data-aos="fade-up">
+        <div class="row heading-block heading-block--center">
             <div class="column large-full">
                 <h2 class="section-heading section-heading--centerbottom">Reading</h2>
 
                 <p class="section-desc">
-                    I take up reading challenges each year and complete them. Here are few of my favourites from the 87 books I read.
+                    I take up reading challenges each year and complete them. Here are few favourites from the 87 books I read.
                 </p>
             </div>
         </div> <!-- end heading-block -->
 
         <div class="row services-list block-large-1-3 block-medium-1-2 block-tab-full">
 
-            <div class="column item-service" data-aos="fade-up">
+            <div class="column item-service">
                 <div class="item-service__content">
                     <h4 class="item-title">A Man Called Ove</h4>
                     <p>
@@ -293,7 +293,7 @@
                 </div>
             </div>
 
-            <div class="column item-service" data-aos="fade-up">
+            <div class="column item-service">
                 <div class="item-service__content">
                     <h4 class="item-title">Atomic Habits</h4>
                     <p>
@@ -304,7 +304,7 @@
                 </div>
             </div>
 
-            <div class="column item-service" data-aos="fade-up">
+            <div class="column item-service">
                 <div class="item-service__content">
                     <h4 class="item-title">Web Design</h4>
                     <p>
@@ -315,7 +315,7 @@
                 </div>
             </div>
 
-            <div class="column item-service" data-aos="fade-up">
+            <div class="column item-service">
                 <div class="item-service__content">
                     <h4 class="item-title">Product Strategy</h4>
                     <p>
@@ -326,7 +326,7 @@
                 </div>
             </div>
 
-            <div class="column item-service" data-aos="fade-up">
+            <div class="column item-service">
                 <div class="item-service__content">
                     <h4 class="item-title">UI/UX Design</h4>
                     <p>
@@ -337,7 +337,7 @@
                 </div>
             </div>
 
-            <div class="column item-service" data-aos="fade-up">
+            <div class="column item-service">
                 <div class="item-service__content">
                     <h4 class="item-title">Mobile Design</h4>
                     <p>
@@ -355,9 +355,9 @@
 
     <!-- works
     ================================================== -->
-    <section id="works" class="s-works target-section">
+    <section id="causes" class="s-works target-section">
 
-        <div class="row heading-block heading-block--center" data-aos="fade-up">
+        <div class="row heading-block heading-block--center">
             <div class="column large-full">
                 <h2 class="section-heading section-heading--centerbottom">Selected Works</h2>
                 <p class="section-desc">
@@ -373,13 +373,13 @@
     ================================================== -->
     <section id="contact" class="s-contact ss-dark target-section">
 
-        <div class="row heading-block" data-aos="fade-up">
+        <div class="row heading-block">
             <div class="column large-full">
                 <h2 class="section-heading">Get In Touch</h2>
             </div>
         </div>
 
-        <div class="row contact-main" data-aos="fade-up">
+        <div class="row contact-main">
             <div class="column large-full">
                 <p class="contact-email">
                     <a href="mailto:#0">vkalantri26@gmail.com</a>
