reading and causes

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <ul class="header-main-nav">
                 <li class="current"><a class="smoothscroll" href="#intro" title="intro">Intro</a></li>
                 <li><a class="smoothscroll" href="#about" title="about">About</a></li>
-                <li><a class="smoothscroll" href="#reading" title="reading">Services</a></li>
-                <li><a class="smoothscroll" href="#causes" title="causes">Works</a></li>
+                <li><a class="smoothscroll" href="#reading" title="reading">Reading</a></li>
+                <li><a class="smoothscroll" href="#causes" title="causes">Causes</a></li>
                 <li><a class="smoothscroll" href="#contact" title="contact us">Say Hello</a></li>	
             </ul>
 
@@ -359,7 +359,7 @@
 
         <div class="row heading-block heading-block--center">
             <div class="column large-full">
-                <h2 class="section-heading section-heading--centerbottom">Selected Works</h2>
+                <h2 class="section-heading section-heading--centerbottom">Causes</h2>
                 <p class="section-desc">
                     Some other causes I care about are equity, equality and women representation in the corporate workforce.
                 </p>
