--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
         <div class="row intro-content">
 
             <div class="column large-9 mob-full intro-text">
-                <h3>Hello, I'm Vaishnavi Kalantri</h3>
+                <h3>Aspiring to be the best people manager ever,</h3>
                 <h1>
-                    Aspiring To Be<br>
-                    The Best People<br>
-                    Manager Ever.
+                    Hello, I am<br>
+                    Vaishnavi Kalantri.
                 </h1>
             </div>
 
