a bunch of changes

--- a/index.html
+++ b/index.html
@@ -43,12 +43,6 @@
     ================================================== -->
     <header class="s-header">
 
-        <div class="header-logo">
-            <a class="site-logo" href="index.html">
-                <img src="images/logo.svg" alt="Homepage">
-            </a>
-        </div>
-
         <nav class="header-nav-wrap">
             <ul class="header-main-nav">
                 <li class="current"><a class="smoothscroll" href="#intro" title="intro">Intro</a></li>
@@ -81,7 +75,8 @@
                 <h3>Aspiring to be the best people manager ever,</h3>
                 <h1>
                     Hello, I am<br>
-                    Vaishnavi Kalantri.
+                    Vaishnavi 
+                    Kalantri.
                 </h1>
             </div>
 
