--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h3>Aspiring to be the best people manager ever,</h3>
                 <h1>
                     Hello, I am<br>
-                    Vaishnavi 
+                    Vaishnavi <br>
                     Kalantri.
                 </h1>
             </div>
