--- a/index.html
+++ b/index.html
@@ -108,10 +108,7 @@
             <div class="row about-me__content">
                 <div class="column large-full about-me__text">
                     <p class="lead">
-                    Nulla aspernatur nam et accusantium. Tempore delectus dignissimos aut
-                    ab commodi. Labore et cupiditate temporibus odio debitis eaque. 
-                    Officia provident aut iste et dicta perferendis. Velit iure adipisci. 
-                    Molestiae qui fuga rerum facilis.
+                    Good day
                     </p>
 
                     <p>
